# func_recv_OCL

./: CMakeLists.txt  README.md
data_save/: benchmark_1024_1024.txt  benchmark_256_256.txt  plot_data.py  plot_kern.py
libs/: CMakeLists.txt
libs/func_recv_model/: CMakeLists.txt  control.h  f_approximation_1d_etal.h  f_approximation_1d_regular_grid.c  f_kernels_2d.cpp  f_kernels_2d.h  imit_test_func_2d.cpp  imit_test_func_2d.h  main.c  param_imit_1d.h  param_imit_2d.h  print_file_utils.h  useful_tools.cpp
paper/: OCL_model.tex  OCLprog.tex  Sergeeva_E_I_KMU13.tex  bibl.bib  bibl__cp1251.bib  bspp_review.tex  func_recv_4.tex  func_recv_4__SAV.tex  func_recv_4__cp1251.tex  func_recv_alg.tex  func_recv_annotate.tex  func_recv_intro.tex  func_recv_intro__cp1251.tex  func_recv_notation.tex  func_recv_scheme_OCL.tex  paper_func_recv.tex  presentation_KMU13.tex  sample.puerov_sergeeva.tex  test_results.tex
paper/images/: bfly_fbf.odg  mics_pics.odg  net.odg  net_2D.eps  net_2D.odg
src/: main_func_recv_2D.cpp
src/cl/: func_recv_2D_prod.cl  func_recv_2D_sum.cl  sum.cl
src/func_recv_model/: def_types.h  f_approximation_1d_etal.c  f_approximation_1d_regular_grid.h  f_approximation_2d.c  f_approximation_2d.h  f_kernels_1d.c  f_kernels_1d.h  imit_test_func_1d.c  imit_test_func_1d.h  imit_test_func_2d.c  print_file_utils.c  useful_tools.h
